--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,136 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.49.8
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp3.scproxy.top
-  - &id002
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: zjxc.pmxu.link
-    port: 34322
-    cipher: auto
-    uuid: e33aee02-9ab2-365e-840b-47fe8597c425
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: ss
-    server: free.node.kk-proxy.pro
-    port: 24960
-    password: 45cdaeb3-7fce-49ae-a12c-3879d9cab756
-    cipher: chacha20-ietf-poly1305
-  - &id004
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
-    type: vmess
-    server: 162.159.243.53
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id005
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: zjxc.pmxu.link
-    port: 44207
-    cipher: auto
-    uuid: 3f9dc929-5af2-3a3d-8744-983547eddde0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: 120.233.43.62
-    port: 51504
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
-    type: vmess
-    server: 162.159.253.16
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id008
-    name: 🇰🇷_KR_韩国
-    type: ss
-    server: 43.201.61.124
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇸🇬_SG_新加坡_1
-    type: ss
-    server: 13.212.247.98
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.67.57.119
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp3.scproxy.top
-  - &id011
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
-    type: vmess
-    server: 172.67.59.39
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.67.127.46
+    server: 172.67.189.168
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -149,35 +20,40 @@ proxies:
       path: /shirker
       headers:
         host: lv2.scproxy.top
-  - &id013
-    name: 🇨🇦_CA_加拿大_1
-    type: trojan
-    server: 51.161.35.200
-    port: 443
-    udp: true
-    password: 006e3baa-cacd-4530-ae52-d633c4e9056d
-    sni: speed.cloudflare.com
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
+  - &id002
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 103.160.204.242
-    port: 8080
+    server: 172.67.12.199
+    port: 80
     cipher: auto
-    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /blue
+      path: /shirker
       headers:
-        host: ecc.vtcss.top
-  - &id015
+        host: lv2.scproxy.top
+  - &id003
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.7.166
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: lv2.scproxy.top
+  - &id004
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: cf-lt.sharecentre.online
+    server: 172.67.212.44
     port: 80
     cipher: auto
     uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
@@ -188,44 +64,29 @@ proxies:
     ws-opts:
       path: /shirker
       headers:
-        host: dp4.ilovescp.com
-  - &id016
+        host: dp3.scproxy.top
+  - &id005
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 6.wyhkaa0.gq
-    port: 2095
-    cipher: auto
-    uuid: 6bbc9554-07bc-47c6-a088-87aa79fd5ca1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: 6.wyhkaa0.gq
-  - &id017
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: ru1.mianfenyun012.eu.org
+    server: 172.67.152.248
     port: 80
     cipher: auto
-    uuid: c5964a63-d67c-4668-cdae-6443a1581e76
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /jdbp606
+      path: /shirker
       headers:
-        host: ru1.mianfenyun012.eu.org
-  - &id018
+        host: lv2.scproxy.top
+  - &id006
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 104.18.236.126
-    port: 8080
+    server: 104.17.159.28
+    port: 80
     cipher: auto
-    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -233,119 +94,48 @@ proxies:
     ws-opts:
       path: /blue
       headers:
-        host: ecc.vtcss.top
-  - &id019
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
-    type: vmess
-    server: 103.160.204.154
-    port: 80
-    cipher: auto
-    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue06
-      headers:
-        host: ecc.vtcss.top
-  - &id020
-    name: 🇸🇬_SG_新加坡_2
-    type: ss
-    server: 13.229.205.33
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id021
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: vmess
-    server: zjxc.pmxu.link
-    port: 25153
-    cipher: auto
-    uuid: e33aee02-9ab2-365e-840b-47fe8597c425
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇯🇵_JP_日本
-    type: ss
-    server: 13.115.245.166
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id023
+        host: tui.vtcss.top
+  - &id007
     name: 🇺🇸_US_美国_7
-    type: ss
-    server: 35.91.109.62
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
     type: vmess
-    server: 183.232.249.189
-    port: 59902
+    server: ahsorathiyaa.fly.dev
+    port: 443
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ahsorathiyaa.fly.dev
+  - &id008
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 57.128.173.6
+    port: 443
+    udp: true
+    password: 29f2cf65-f0ee-4a08-83f3-df1beb74d55d
+    sni: www.speedtest.net
     skip-cert-verify: true
     network: tcp
-  - &id025
-    name: 🇺🇸_US_美国->🇭🇰_HK_香港
-    type: vmess
-    server: hk1.mianfenyun012.eu.org
-    port: 8080
-    cipher: auto
-    uuid: 7dccf399-a5e9-4696-d2c9-a831dd5fb1af
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dhjks
-      headers:
-        host: hk1.mianfenyun012.eu.org
-  - &id026
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+  - &id009
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
     type: ss
-    server: free.node.kk-proxy.pro
-    port: 54087
-    password: 98b6ab91-ff1b-476b-a810-575f1dd583f7
+    server: p1.bxy-fun1.com
+    port: 23102
+    password: d7bee830-09aa-43b2-8945-3b341b8787db
     cipher: chacha20-ietf-poly1305
-  - &id027
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 172.64.132.22
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp4.ilovescp.com
-  - &id028
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 17.wyhkaa0.gq
-    port: 2095
-    cipher: auto
-    uuid: 1e36655b-7d28-4513-d7f8-5f1a0c00a07d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: 17.wyhkaa0.gq
-  - &id029
-    name: 🇨🇦_CA_加拿大_2
+  - &id010
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: 139.162.5.19
+    port: 8099
+    password: eIW0Dnk69454e6nSwuspv9DmS201tQ0D
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇨🇦_CA_加拿大_1
     type: vmess
     server: 23.227.38.81
     port: 443
@@ -359,7 +149,7 @@ proxies:
       path: /dongtaiwang.com
       headers:
         host: d.freeh1.xyz
-  - &id030
+  - &id012
     name: 🇳🇱_NL_荷兰->🇺🇸_US_美国
     type: vmess
     server: 188.114.97.168
@@ -374,8 +164,83 @@ proxies:
       path: /blue06
       headers:
         host: ecc.vtcss.top
-  - &id031
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
+  - &id013
+    name: 🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 23.227.39.82
+    port: 443
+    cipher: auto
+    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dongtaiwang.com
+      headers:
+        host: d.freeh1.xyz
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.19.206.172
+    port: 80
+    cipher: auto
+    uuid: 4714b6cc-a9f0-4db0-a215-d668e6c3b0a7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /123
+      headers:
+        host: jk.maxop002.tk
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: wi.saintink.eu.org
+    port: 443
+    cipher: auto
+    uuid: 927094d3-d678-4763-8591-e240d0bcae87
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vuk2.0bad.com/chat
+      headers:
+        host: sub2.saintink.eu.org
+  - &id016
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
+    type: vmess
+    server: 103.160.204.242
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id017
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 104.27.43.111
+    port: 80
+    cipher: auto
+    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id018
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
     type: vmess
     server: 103.160.204.98
     port: 80
@@ -389,13 +254,80 @@ proxies:
       path: /blue06
       headers:
         host: ecc.vtcss.top
-  - &id032
-    name: 🇺🇸_US_美国_10
+  - &id019
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: 172.64.130.176
+    server: 172.67.95.171
     port: 80
     cipher: auto
-    uuid: c53919e6-fed6-4058-a02c-eb3f4452f691
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp3.scproxy.top
+  - &id020
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: cdn.twitter.now.cc
+    port: 443
+    cipher: auto
+    uuid: 8d2ba456-2f0d-4c13-b8a0-bff99c679709
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ikun
+      headers:
+        host: lo.twittei.me
+  - &id021
+    name: 🇸🇬_SG_新加坡_2
+    type: ss
+    server: 13.215.161.16
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇨🇭_CH_瑞士
+    type: vmess
+    server: b2.wuxianliulianng.xyz
+    port: 443
+    cipher: auto
+    uuid: c0949fdc-f58e-4b02-8c6c-54c5f2e1d848
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /sometimesnaive
+      headers:
+        host: 2.wuxianliulianng.xyz
+  - &id023
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 162.159.194.228
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.ilovescp.com
+  - &id024
+    name: 🇹🇼_TW_台湾
+    type: vmess
+    server: hinet.guguyun.pw
+    port: 36555
+    cipher: auto
+    uuid: b223ac7e-4f14-4ec7-bd9d-7aaedecda32b
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -403,20 +335,98 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: csmg.daozhang.link
-  - &id033
-    name: 🇨🇳_CN_中国
+        host: hinet.guguyun.pw
+  - &id025
+    name: 🇺🇸_US_美国_13
     type: vmess
-    server: 36.150.27.31
+    server: 172.64.169.199
     port: 80
     cipher: auto
-    uuid: db8d12d5-1968-4125-b775-77d50aa65923
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id026
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 198.200.37.231
+    port: 51009
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇸🇬_SG_新加坡_3
+    type: ss
+    server: 54.255.43.76
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id028
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 45.32.153.201
+    port: 8443
+    cipher: auto
+    uuid: 3d0c8ee5-3329-4252-aa1c-65f3fdaa0343
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
+  - &id029
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 172.64.132.22
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.ilovescp.com
+  - &id030
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: Tokyo.Mfa.EE
+    port: 2082
+    cipher: auto
+    uuid: 250f4331-8c3e-4b87-a86b-5c5fbf9ddba8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /aries?ed=2048
+      headers:
+        host: scw-fr.iiio.wiki
+  - &id031
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
+    type: vmess
+    server: 103.160.204.154
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue06
+      headers:
+        host: ecc.vtcss.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -474,8 +484,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -512,8 +520,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -548,8 +554,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
