--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -16,7 +16,10 @@ proxies:
   - {name: 二爷翻墙 https://1808.cf Node_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.scproxy.top}}}
   - {name: 二爷翻墙 https://1808.cf Node_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
   - {name: 二爷翻墙 https://1808.cf Node_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk.ilovescp.com}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -35,6 +38,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -53,6 +59,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -71,6 +80,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: 📲 电报信息
     type: select
     proxies:
@@ -88,6 +100,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -105,6 +120,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -122,6 +140,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: 📢 谷歌FCM
     type: select
     proxies:
@@ -140,6 +161,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -174,6 +198,9 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_10
       - 二爷翻墙 https://1808.cf Node_11
       - 二爷翻墙 https://1808.cf Node_12
+      - 二爷翻墙 https://1808.cf Node_13
+      - 二爷翻墙 https://1808.cf Node_14
+      - 二爷翻墙 https://1808.cf Node_15
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
