--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,38 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: 142.4.126.23
-    port: 51715
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: v117.runba.gq
+    server: mrb2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 892ebb75-7055-3007-8d16-356e65c6a49a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /v117DEcxDXxxOvD
-      headers:
-        host: v117.runba.gq
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: Tokyo.mfa.ee
-    port: 2052
-    cipher: auto
-    uuid: 992889a7-296e-4a44-98c2-0eb89af4411d
+    uuid: 52cce261-ff53-439a-b97d-f36201842cdb
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -45,9 +19,138 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: vnpt.iiio.wiki
+        host: mrb2.shabijichang.com
+  - &id002
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: 172.67.133.117
+    port: 80
+    cipher: auto
+    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm4.shabijichang.com
+  - &id003
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: 172.67.1.123
+    port: 80
+    cipher: auto
+    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: xn4.shabijichang.com
   - &id004
-    name: 🇨🇦_CA_加拿大_1
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: 172.64.195.218
+    port: 80
+    cipher: auto
+    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: xn2.shabijichang.com
+  - &id005
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10701
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
+    type: ss
+    server: api-wx-2.rancho.gay
+    port: 50005
+    password: 8cfdc816-26ae-4bc0-9dc8-efd58d9c4e47
+    cipher: chacha20-ietf-poly1305
+  - &id007
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.53.250
+    port: 80
+    cipher: auto
+    uuid: 392053a2-c18f-4914-890c-fd326ee27b4f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: asb3.shabijichang.com
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.17.45.51
+    port: 443
+    cipher: auto
+    uuid: F3E36B53-E75E-48C0-B9F1-F918F397E996
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /speedtest
+      headers:
+        host: Kansas.bobbykotick.rip
+  - &id009
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27108
+    password: 788c06bf-83b0-4186-b45d-8966efc7c3fc
+    cipher: chacha20-ietf-poly1305
+  - &id010
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: mm.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: f1865e50-2510-46d1-bcb2-e00b4b656305
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm.shabijichang.com
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 45.199.138.184
+    port: 37831
+    cipher: auto
+    uuid: 078eb24d-8d1d-4fbd-b914-ee58a897a35e
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇨🇳_CN_中国->🇮🇹_IT_意大利
+    type: ss
+    server: yidong.liulangdiqiu.cyou
+    port: 10718
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id013
+    name: 🇨🇦_CA_加拿大
     type: vmess
     server: 23.227.38.81
     port: 443
@@ -61,28 +164,128 @@ proxies:
       path: /dongtaiwang.com
       headers:
         host: d.freeh1.xyz
-  - &id005
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+  - &id014
+    name: 🇭🇰_HK_香港
+    type: ss
+    server: 20.205.4.27
+    port: 8443
+    password: 6EQ2ezT3Ui
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇻🇳_VN_越南
     type: vmess
-    server: ca-01.gujuji.top
-    port: 8080
+    server: 103.239.67.2
+    port: 80
     cipher: auto
-    uuid: d46d992a-8d80-4586-84fb-f1823757552e
+    uuid: 0ff0bbb5-35f1-4056-acfe-b62a949e1e24
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: ca-01.gujuji.top
-  - &id006
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+      path: /4gspeed.me
+  - &id016
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: trojan
+    server: t-06.outrdp.xyz
+    port: 13029
+    udp: true
+    password: 08edd664-1d09-369b-a876-12f6ebee0b4b
+    sni: ip2648428075.mobgslb.tbcache.com
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: sg1.wyhkaa0.cf
+    server: 156.225.67.153
+    port: 443
+    cipher: auto
+    uuid: a7fa8f14-4fb6-4280-9005-d6bbe99c5da9
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1694166526848
+      headers:
+        host: www.84550179.xyz
+  - &id018
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vmess
+    server: 104.27.193.64
+    port: 443
+    cipher: auto
+    uuid: 8bb01190-f127-4a5a-9845-e6adf93eccc1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pDDgT3v8NaAJHFPuEaDfC8t
+      headers:
+        host: avaspeed.jetspeed.fun
+  - &id019
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 45.199.138.180
+    port: 54885
+    cipher: auto
+    uuid: d3133484-f2bf-4b0c-8d38-f8e645b65687
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 45.199.138.190
+    port: 34987
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 156.225.67.103
+    port: 53790
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 45.199.138.162
+    port: 48912
+    cipher: auto
+    uuid: 65ea6727-4461-47a7-a5c4-fef2c67f2f79
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 45.199.138.152
+    port: 55446
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca4690dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇭🇰_HK_香港->🇨🇦_CA_加拿大
+    type: vmess
+    server: 103.160.204.108
     port: 80
     cipher: auto
-    uuid: f4575c03-8145-4612-a1b2-7a48117f6fc2
+    uuid: 7ca21098-691c-4c12-8aac-934b21635423
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -90,153 +293,39 @@ proxies:
     ws-opts:
       path: /TG:@hkaa0
       headers:
-        host: sg1.wyhkaa0.cf
-  - &id007
-    name: 🇺🇸_US_美国_3
+        host: 16.wyhkaa0.gq
+  - &id025
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
-    server: franc.digires.shop
-    port: 443
-    cipher: auto
-    uuid: 1af4ba3d-e60f-4f83-b38b-23fc181f676d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /11201
-      headers:
-        host: franc.digires.shop
-  - &id008
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_1
-    type: vmess
-    server: hongkong1145141.baiduvideos.online
+    server: v101.runba.gq
     port: 80
     cipher: auto
-    uuid: 95252c48-c73b-4a1f-94d0-d351de9c50c8
+    uuid: 2a8a10fb-9ca3-367e-a234-cf09f841be4f
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /11451
+      path: /frfrxxx0fk832v101N
       headers:
-        host: hongkong1145141.baiduvideos.online
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 80.92.205.254
-    port: 80
-    password: RbFACM4jlr9OVR1z2dnO8I
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇯🇵_JP_日本
+        host: v101.runba.gq
+  - &id026
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
     type: vmess
-    server: jp6.lianpi.xyz
-    port: 23234
-    cipher: auto
-    uuid: 1f3d67b4-6929-4598-90ca-84a841bf02e4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇸🇬_SG_新加坡_1
-    type: ss
-    server: 5.34.177.82
-    port: 80
-    password: 9eMQ1yPowwygotq0VUv4qs
-    cipher: chacha20-ietf-poly1305
-  - &id012
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 23.227.38.82
+    server: wi.saintink.eu.org
     port: 443
     cipher: auto
-    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
+    uuid: 927094d3-d678-4763-8591-e240d0bcae87
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /dongtaiwang.com
+      path: /vuk2.0bad.com/chat
       headers:
-        host: d.freeh1.xyz
-  - &id013
-    name: 🇮🇱_IL_以色列
-    type: ss
-    server: 77.91.69.236
-    port: 51348
-    password: bhldXbB67HGqwR120AW5ZP
-    cipher: chacha20-ietf-poly1305
-  - &id014
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: trojan
-    server: dtpjx-1082-tr-8.r-kcd-a.tuil.xyz
-    port: 39909
-    udp: true
-    password: PtxApBjJcFkxXnYZAQTvALYNvhXjpWKg
-    sni: s3.cjhh.beauty
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇨🇦_CA_加拿大_3
-    type: vmess
-    server: 23.227.39.82
-    port: 443
-    cipher: auto
-    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dongtaiwang.com
-      headers:
-        host: d.freeh1.xyz
-  - &id016
-    name: 🇸🇬_SG_新加坡_2
-    type: ss
-    server: 18.136.126.26
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 198.244.252.93
-    port: 443
-    udp: true
-    password: de5a47b3e2
-    sni: uk1.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: 14.18.106.137
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_2
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
-  - &id020
-    name: 🇺🇸_US_美国_5
+        host: sub2.saintink.eu.org
+  - &id027
+    name: 🇺🇸_US_美国_10
     type: vmess
     server: us1.mianfenyun012.eu.org
     port: 8080
@@ -250,37 +339,44 @@ proxies:
       path: /jdbp606
       headers:
         host: us1.mianfenyun012.eu.org
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: 14.18.108.108
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    sni: nl01.lovehjq.xyz
+  - &id028
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 45.199.138.62
+    port: 36307
+    cipher: auto
+    uuid: 130c9f2e-42b1-4ebf-b345-e26456a061f9
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_6
-    type: trojan
-    server: 23.247.137.71
-    port: 3306
-    udp: true
-    password: d4e41ff772c7fd45
-    sni: n2.gladns.com
+  - &id029
+    name: 🇺🇸_US_美国->🇨🇳_CN_中国
+    type: vmess
+    server: 172.67.196.139
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /gateway/connect
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 92.53.86.220
-    port: 51348
-    password: Y26aH7Xfgd5f0xXKA
-    cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id030
+    name: 🇺🇸_US_美国_12
+    type: trojan
+    server: yuumv-1088-tr-0.d-kcd.tuil.xyz
+    port: 889
+    udp: true
+    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
+    sni: s3.cjhh.beauty
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: ns1.v2-vip.fun
     port: 8880
@@ -294,127 +390,66 @@ proxies:
       path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
         host: fr7.tehme100.fun
-  - &id025
-    name: 🇨🇳_CN_中国
+  - &id032
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
     type: vmess
-    server: in06.my1188.org
-    port: 64099
-    cipher: auto
-    uuid: c78d7d2c-d93e-3cfd-98e0-e3d43cc1096d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇸🇬_SG_新加坡_3
-    type: ss
-    server: 13.213.53.160
+    server: dongtaiwang2.com
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id027
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 91.228.10.89
-    port: 80
-    password: 72JB7n05CEq4sjH0Rz4YzV
-    cipher: chacha20-ietf-poly1305
-  - &id028
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 103.149.144.45
-    port: 19482
     cipher: auto
-    uuid: 50a170b7-1198-4603-e51a-0da28605d9e2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.31.16.46
-    port: 2082
-    cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
-      headers:
-        host: ca5.tehme100.fun
-  - &id030
-    name: 🇹🇼_TW_台湾_1
-    type: trojan
-    server: rzuee-1075-tr-0.d-hinet-02.ddll.bond
-    port: 889
-    udp: true
-    password: LYaOvuNXdQGTZNonhlRUKqOJcKVihzKY
-    sni: cdn.cjhh.lol
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇹🇼_TW_台湾_2
-    type: vmess
-    server: wqryo-1075-v2-0.d-hinet-02.ddll.bond
-    port: 888
-    cipher: auto
-    uuid: a590e692-4c8d-42dd-ba80-b1765a34f699
+    uuid: 87a95522-985c-4a17-afea-9b7d7208bce5
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /je5x3pBN1vez3NQudNkB
+      path: /dongtaiwang.com
       headers:
-        host: cdn.cjhh.lol
-  - &id032
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_3
-    type: vmess
-    server: 172.67.10.151
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: ca.ilovescp.com
+        host: 3.freek1.xyz
   - &id033
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_4
+    name: 🇨🇳_CN_中国_1
     type: vmess
-    server: 172.64.105.187
-    port: 80
+    server: v29.heduian.online
+    port: 30866
     cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
+    uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
+    alterId: 2
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /oooo
       headers:
-        host: ca.ilovescp.com
+        host: v29.heduian.online
   - &id034
-    name: 🇺🇸_US_美国->🇨🇳_CN_中国_5
+    name: 🇨🇳_CN_中国_2
     type: vmess
-    server: 172.67.59.39
+    server: v4.heduian.online
+    port: 30866
+    cipher: auto
+    uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
+    alterId: 2
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /oooo
+      headers:
+        host: baidu.com
+  - &id035
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: sg2.wyhkaa0.cf
     port: 80
     cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    uuid: fc426675-5daa-46c0-d998-61f9f5323e3f
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /TG:@hkaa0
       headers:
-        host: ca.ilovescp.com
+        host: sg2.wyhkaa0.cf
 proxy-groups:
   - name: PROXY
     type: select
@@ -475,6 +510,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -514,6 +550,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -551,6 +588,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
